--- a/Tennis-scheduler/src/main/resources/application.properties
+++ b/Tennis-scheduler/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/TennisScheduler
 
 #Credentionals for communication with database
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=danilo
 
 spring.jpa.hibernate.ddl-auto = update
 
@@ -14,7 +14,7 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 
 #https://stackoverflow.com/questions/28042426/spring-boot-error-creating-bean-with-name-datasource-defined-in-class-path-r
-spring.jpa.defer-datasource-initialization=true
+#spring.jpa.defer-datasource-initialization=true
 
 #formatira ispis SQL upita koje Hibernate pravi ka bazi na IDE konzoli
 spring.jpa.properties.hibernate.format_sql=true
@@ -23,3 +23,12 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
 server.port=${port:8081}
+
+#-----------------------------------------------#
+#Liquibase properties
+spring.liquibase.enabled=true
+spring.application.name=TennisSchedulerApplication
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
+spring.jpa.defer-datasource-initialization =false
+
+#-----------------------------------------------#
