--- a/Tennis-scheduler/pom.xml
+++ b/Tennis-scheduler/pom.xml
@@ -21,6 +21,8 @@
 		<mapstruct.version>1.5.2.Final</mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
+		<joda-time.version>2.11.1</joda-time.version>
+		<commons.version>3.12.0</commons.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -91,12 +93,12 @@
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
-			<version>2.11.1</version>
+			<version>${joda-time.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.12.0</version>
+			<version>${commons.version}</version>
 		</dependency>
 
 	<dependency>
