--- a/Tennis-scheduler/pom.xml
+++ b/Tennis-scheduler/pom.xml
@@ -17,7 +17,7 @@
 		<java.version>11</java.version>
 		<swagger.version>2.9.2</swagger.version>
 		<liquibase-core.version>4.16.1</liquibase-core.version>
-		<projectlombok.version>1.18.16</projectlombok.version>
+		<projectlombok.version>1.18.24</projectlombok.version>
 		<mapstruct.version>1.5.2.Final</mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
@@ -108,6 +108,11 @@
 			<artifactId>mapstruct</artifactId>
 			<version>${mapstruct.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
