feat: spring security added

--- a/Tennis-scheduler/src/main/resources/application.properties
+++ b/Tennis-scheduler/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/TennisScheduler
 
 #Credentionals for communication with database
 spring.datasource.username=postgres
-spring.datasource.password=danilo
+spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto = update
 
