--- a/Tennis-scheduler/pom.xml
+++ b/Tennis-scheduler/pom.xml
@@ -20,13 +20,14 @@
 		<projectlombok.version>1.18.24</projectlombok.version>
 		<mapstruct.version>1.5.3.Final</mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
+		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<spring-boot-starter-data-jpa.version>2.7.4</spring-boot-starter-data-jpa.version>
 		<postgresql.version>42.5.0</postgresql.version>
 		<spring-boot-starter-web.version>2.7.4</spring-boot-starter-web.version>
 		<springdoc-openapi-ui.version>1.6.11</springdoc-openapi-ui.version>
 		<spring-boot-starter-test.version>2.7.4</spring-boot-starter-test.version>
 		<h2.version>2.1.214</h2.version>
+		<jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -101,7 +102,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
 					<source>9</source>
 					<target>9</target>
@@ -123,6 +124,25 @@
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco-maven-plugin.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
