--- a/Tennis-scheduler/src/test/resources/application.properties
+++ b/Tennis-scheduler/src/test/resources/application.properties
@@ -11,7 +11,7 @@ server.port=${port:8081}
 
 #-----------------------------------------------#
 #Liquibase properties
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.application.name=TennisSchedulerApplication
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 #https://stackoverflow.com/questions/28042426/spring-boot-error-creating-bean-with-name-datasource-defined-in-class-path-r
