bug-fix: added annotations for boolean in h2 database

--- a/Tennis-scheduler/src/test/resources/application.properties
+++ b/Tennis-scheduler/src/test/resources/application.properties
@@ -15,6 +15,6 @@ spring.liquibase.enabled=false
 spring.application.name=TennisSchedulerApplication
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 #https://stackoverflow.com/questions/28042426/spring-boot-error-creating-bean-with-name-datasource-defined-in-class-path-r
-spring.jpa.defer-datasource-initialization =false
+#spring.jpa.defer-datasource-initialization =false
 
 #-----------------------------------------------#
