--- a/Tennis-scheduler/src/main/resources/application.properties
+++ b/Tennis-scheduler/src/main/resources/application.properties
@@ -24,6 +24,12 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 
 server.port=${port:8081}
 
+#svakog prvog u mesecu
+greeting.cron=0 0 0 1 * *
+# ova vrednost oznacava - bilo koji dan, bilo koji sat, bilo koji minut i 30 sekundi. Na primer 14:14:30, 14:15:00, 14:15:30 itd.
+#greeting.cron=*/30 * * * * *
+
+
 #-----------------------------------------------#
 #Liquibase properties
 spring.liquibase.enabled=true
